Wed Nov 28 15:28:16 UTC 2012  Manjula Peiris  <tmpeiris at cs dot iupui dot edu>

        * cuts/unite/Dataflow_Graph_Builder.cpp:
        * cuts/unite/Unite_App.cpp:

          Removed the mutable keyword. It is causing compilation issues
          in newer versions of g++.

Fri Nov 16 18:55:19 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>

        * ChangeLogs/ChangeLog-1_0_3:

          Tagging ChangeLog