@@ -100,9 +100,14 @@ public:
   }
 
 private:
-  CUTS_Dataflow_Graph & graph_;
+#if __GNUC__ > 4 || \
+    (__GNUC__ == 4 && (__GNUC_MINOR__ > 5))
+    CUTS_Dataflow_Graph & graph_;
+#else
+    mutable CUTS_Dataflow_Graph & graph_;
+#endif
 
-  CUTS_Log_Format & format_;
+    CUTS_Log_Format & format_;
 };
 
 /**
